--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@amanda/back-tracker",
   "version": "1.0.0",
-  "description": "Back track in js code execution and find where a function was called",
+  "description": "Back track in JS code execution and find where a function was called",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
