--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backtracker",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Back track in JS code execution and find where a function was called",
-  "main": "index.js",
+  "main": "dist/index",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc -p ."
   },
   "keywords": [
     "backtrack",
@@ -14,5 +16,12 @@
     "back"
   ],
   "author": "PapiOphidian",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "14.11.2",
+    "typescript": "^4.0.3"
+  },
+  "files": [
+    "dist"
+  ]
 }
