--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -p ."
   },
+  "repository": "git://github.com/PapiOphidian/BackTracker.git",
   "keywords": [
     "backtrack",
     "backtracker",
