--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backtracker",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Back track in JS code execution and find where a function was called",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -23,6 +23,7 @@
     "typescript": "^4.2.4"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ]
 }
