--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backtracker",
-  "version": "3.1.4",
+  "version": "3.2.0",
   "description": "Back track in JS code execution and find where a function was called",
   "main": "dist/index",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "backtracker",
     "back-track",
     "back-tracker",
-    "back"
+    "errors"
   ],
   "author": "PapiOphidian",
   "license": "MIT",
