--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
 		"pretty": true,
 		"removeComments": false,
 		"resolveJsonModule": true,
-		"sourceMap": false,
+		"sourceMap": true,
 		"strictFunctionTypes": true,
 		"strictBindCallApply": true,
 		"target": "esnext",
