--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backtracker",
-  "version": "3.3.2",
+  "version": "4.0.0",
   "description": "Back track in JS code execution and find where a function was called",
   "main": "dist/index",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -p ."
   },
   "repository": "git://github.com/PapiOphidian/BackTracker.git",
@@ -19,8 +18,8 @@
   "author": "PapiOphidian",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "typescript": "^4.9.3"
+    "@types/node": "^20.11.25",
+    "typescript": "^5.4.2"
   },
   "files": [
     "dist",
