--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"strict": true,
-		"incremental": true,
+		"incremental": false,
 		"lib": ["esnext"],
 		"module": "commonjs",
 		"moduleResolution": "node",
