--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"esModuleInterop": true,
 		"alwaysStrict": true,
 		"declaration": true,
-		"emitDecoratorMetadata": true,
+		"emitDecoratorMetadata": false,
 		"experimentalDecorators": true,
 		"strict": true,
 		"incremental": false,
